<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CollegeDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_tab_schedule">Rozvrh</string>
    <string name="main_tab_freerooms">Učebny</string>
    <string name="main_tab_map">Mapa</string>
    <string name="main_tab_changes">Změny</string>

    <string name="menu_title_about">O aplikaci</string>
    <string name="menu_title_setting">Nastavení</string>

    <string name="nav_drawer_header_menu">Menu</string>
    <string name="nav_drawer_header_app">Aplikace</string>
    <string name="nav_drawer_item_settings">Nastavení</string>
    <string name="nav_drawer_item_about">O Aplikaci</string>
    <string name="nav_drawer_item_navigate">Navigace do učebny</string>

    <string name="btn_change_faculty">Zmeň fakultu</string>
    <string name="btn_center_position">Moje pozice</string>
    <string name="btn_center_school_city">Hradec Králové</string>
    <string name="title_navigate_dialog">Navigace</string>
    <string name="navigate_label_building">Budova:</string>
    <string name="navigate_label_source">Počátek:</string>
    <string name="navigate_label_target">Cíl:</string>
    <string name="map_param_label_building">Budova:</string>
    <string name="map_param_label_date">Datum:</string>
    <string name="map_param_label_time">Čas:</string>
    <string name="btn_navigate">Naviguj</string>
    <string name="btn_ok">OK</string>
    <string name="btn_edit">Editovat</string>
    <string name="btn_cancel">Zrušit</string>
    <string name="btn_save">Uložit</string>
    <string name="btn_edit_schedule_list">Seznam</string>
    <string name="btn_load_schedule_list">Nahraj</string>
    <string name="btn_add_schedule_action">Přidej událost</string>
    <string name="btn_detail_list">Detail</string>
    <string name="btn_delete_list">Smazat</string>

    <string name="floor_label">Patro</string>
    <string name="building_label">Budova</string>

    <string name="dialog_parameters_class_map_title">Vyber datum a budovu</string>

    <string name="msg_confirm_delete">Opravdu chcete smazat událost?</string>
    <string name="title_delete_confirm">Pozor!</string>

    <string name="title_schedule_list">Rozvrh</string>

    <string name="menu_drawer_open">Header</string>
    <string name="menu_drawer_close">Header</string>

    <string name="load_data_title">Přihlaš se</string>
    <string name="load_data_hint_stag">stag id</string>
    <string name="load_data_hint_password">heslo</string>
    <string name="load_data_hint_login">uhk_login</string>
    <string name="load_data_btn_load">nahraj</string>
    <string name="load_data_btn_cancel">zrušit</string>

    <string name="label_teacher">Učitel:</string>
    <string name="label_name">Zkratka:</string>
    <string name="label_place">Místo konání:</string>
    <string name="label_capacity">Kapacita:</string>
    <string name="label_occupancy">Naplnění:</string>
    <string name="label_action_type">Typ události:</string>
    <string name="label_start_time">Začátek:</string>
    <string name="label_end_time">Konec:</string>
    <string name="label_day">Den:</string>


    <string name="label_setting_first_day">První den v týdnu</string>
    <string name="label_setting_horizontal_menu">Horizontální menu</string>
    <string name="label_setting_schedule_startend">Ohraničení rozvrhu</string>
    <string name="label_setting_core_service">Smart School Mode</string>
    <string name="label_setting_changes_timer">Smart Changes watcher</string>

</resources>
