<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background"
    >

    <TextView
        android:id="@+id/navigate_detail_title"
        android:text="@string/title_navigate_dialog"
        style="@style/DialogTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigate_detail_title"
        android:layout_above="@+id/navigate_layout_button_box"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/navigate_layout_building"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:weightSum="1.0"
                    >
                    <TextView
                        android:text="@string/navigate_label_building"
                        android:gravity="center"
                        android:layout_weight="0.5"
                        style="@style/ListText"/>

                    <Spinner
                        android:id="@+id/navigate_detail_spin_building"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        style="@style/DefaultSpinner"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/navigate_layout_first_divider"
                    android:layout_below="@+id/navigate_layout_building"
                    android:background="@drawable/default_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

                <LinearLayout
                    android:id="@+id/navigate_layout_source"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/navigate_layout_first_divider"
                    android:weightSum="1.0"
                    >
                    <TextView
                        android:text="@string/navigate_label_source"
                        android:gravity="center"
                        android:layout_weight="0.5"
                        style="@style/ListText"/>

                    <Spinner
                        android:id="@+id/navigate_detail_spin_source"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        style="@style/DefaultSpinner"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/navigate_layout_second_divider"
                    android:layout_below="@+id/navigate_layout_source"
                    android:background="@drawable/default_list_divider"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

                <LinearLayout
                    android:id="@+id/navigate_layout_target"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/navigate_layout_second_divider"
                    android:weightSum="1.0"
                    >
                    <TextView
                        android:text="@string/navigate_label_target"
                        android:gravity="center"
                        android:layout_weight="0.5"
                        style="@style/ListText"/>

                    <Spinner
                        android:id="@+id/navigate_detail_spin_target"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        style="@style/DefaultSpinner"
                        />
                </LinearLayout>

                <View
                    android:layout_below="@+id/navigate_layout_target"
                    android:background="@drawable/default_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigate_layout_button_box"
        style="@style/DialogLayoutButton"
        >
        <Button
            android:id="@+id/navigate_detail_btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_weight="0.5"
            style="@style/DialogButton"/>

        <Button
            android:id="@+id/navigate_detail_btn_navigate"
            android:text="@string/btn_navigate"
            android:layout_weight="0.5"
            style="@style/DialogButton"/>
    </LinearLayout>

</RelativeLayout>