<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/schedule_action_detail_layout_title"
        android:layout_above="@+id/schedule_action_detail_layout_button_box"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                >

                <LinearLayout
                    android:id="@+id/setting_item_first_day"
                    android:layout_alignParentTop="true"
                    style="@style/SettingItemLayout"
                    >

                    <TextView
                        android:layout_weight="0.6"
                        android:paddingLeft="10dp"
                        android:text="@string/label_setting_first_day"
                        style="@style/ListText"/>

                    <View
                        style="@style/ListVerticalDivider"/>

                    <Spinner
                        android:id="@+id/setting_item_spinner_first_day"
                        android:layout_weight="0.4"
                        style="@style/ListSpinner"
                        />

                </LinearLayout>

                <View
                    android:id="@+id/setting_divider_1"
                    android:layout_below="@+id/setting_item_first_day"
                    android:background="@drawable/default_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

                <LinearLayout
                    android:id="@+id/setting_item_horizontal_menu"
                    android:layout_below="@+id/setting_divider_1"
                    style="@style/SettingItemLayout"
                    >

                    <TextView
                        android:layout_weight="0.6"
                        android:paddingLeft="10dp"
                        android:text="@string/label_setting_horizontal_menu"
                        style="@style/ListText"/>

                    <View
                        style="@style/ListVerticalDivider"/>

                    <CheckBox
                        android:id="@+id/setting_item_checkbox_horizontal_menu"
                        android:layout_weight="0.4"
                        style="@style/ListCheckBox"
                        />

                </LinearLayout>

                <View
                    android:id="@+id/setting_divider_2"
                    android:layout_below="@+id/setting_item_horizontal_menu"
                    android:background="@drawable/default_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

                <LinearLayout
                    android:id="@+id/setting_item_schedule_startend"
                    android:layout_below="@+id/setting_divider_2"
                    style="@style/SettingItemLayout"
                    >

                    <TextView
                        android:layout_weight="0.6"
                        android:paddingLeft="10dp"
                        android:text="@string/label_setting_schedule_startend"
                        style="@style/ListText"/>

                    <View
                        style="@style/ListVerticalDivider"/>

                    <Button
                        android:id="@+id/setting_item_button_schedule_start"
                        android:layout_weight="0.2"
                        style="@style/ListButton"
                        />

                    <Button
                        android:id="@+id/setting_item_button_schedule_end"
                        android:layout_weight="0.2"
                        style="@style/ListButton"
                        />

                </LinearLayout>

                <View
                    android:id="@+id/setting_divider_3"
                    android:layout_below="@+id/setting_item_schedule_startend"
                    android:background="@drawable/default_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

                <LinearLayout
                    android:id="@+id/setting_item_core_service"
                    android:layout_below="@+id/setting_divider_3"
                    style="@style/SettingItemLayout"
                    >

                    <TextView
                        android:layout_weight="0.6"
                        android:paddingLeft="10dp"
                        android:text="@string/label_setting_core_service"
                        style="@style/ListText"/>

                    <View
                        style="@style/ListVerticalDivider"/>

                    <CheckBox
                        android:id="@+id/setting_item_checkbox_geofence_timer"
                        android:layout_weight="0.4"
                        style="@style/ListCheckBox"
                        />

                </LinearLayout>

                <View
                    android:id="@+id/setting_divider_4"
                    android:layout_below="@+id/setting_item_core_service"
                    android:background="@drawable/default_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    />

                <LinearLayout
                    android:id="@+id/setting_item_changes_timer"
                    android:layout_below="@+id/setting_divider_4"
                    style="@style/SettingItemLayout"
                    >

                    <TextView
                        android:layout_weight="0.6"
                        android:paddingLeft="10dp"
                        android:text="@string/label_setting_changes_timer"
                        style="@style/ListText"/>

                    <View
                        style="@style/ListVerticalDivider"/>

                    <CheckBox
                        android:id="@+id/setting_item_checkbox_changes_timer"
                        android:layout_weight="0.4"
                        style="@style/ListCheckBox"
                        />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>